syntax = "proto3";
package saonetwork.sao.loan;

option go_package = "github.com/SaoNetwork/sao/x/loan/types";
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";

message LoanPool {
  cosmos.base.v1beta1.DecCoin total = 1 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin loaned_out = 2 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.DecCoin acc_interest_per_coin = 3 [(gogoproto.nullable) = false];
}
